local/airbyte/traefik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: airbyte-web
  namespace: airbyte
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`$AIRBYTE_HOST`)
      kind: Rule
      services:
        - name: airbyte-airbyte-webapp-svc
          port: 80
      middlewares:
        - name: authentik-forwardauth
          namespace: airbyte
  tls:
    secretName: authentik-tls
